# hledger-sim

./: README.md  hledger-sim.cabal  stack.yaml
example/: sample.journal
src/: Config.hs  Main.hs  Rules.hs
